--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "talented_vicky",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "winston": "^3.9.0"
   },
