--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.3",
+    "nodemailer-sendgrid": "^1.0.3",
     "winston": "^3.9.0"
   },
   "devDependencies": {
