--- a/package.json
+++ b/package.json
@@ -17,19 +17,17 @@
     "cookie-session": "^2.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "google-auth-library": "^8.9.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
-    "node-localstorage": "^2.2.1",
-    "nodemailer": "^6.9.3",
-    "nodemailer-sendgrid": "^1.0.3",
+    "node-html-parser": "^6.1.5",
     "passport": "^0.5.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
-    "simple-datetime-formater": "^1.1.3",
     "socket.io": "^4.7.1",
     "winston": "^3.9.0"
   },
