--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.40.0",
     "cookie-session": "^2.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
